--- a/tools.html
+++ b/tools.html
@@ -35,7 +35,7 @@
 
     <style>
         .tool-item {
-            max-width: 393px;
+            max-width: 391px;
             background-color: var(--background-color-2);
             overflow: hidden;
             border-radius: 15px;
@@ -99,6 +99,20 @@
                         <p>Create and edit Markdown task lists with ease.</p>
                         <div style="display: flex; align-items: center; justify-content: end;">
                             <button class="text-button" onclick="window.open('tools/', '_self')">Try it out</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                <div class="tool-item">
+                    <div>
+                        <a href="tools/markdown-reader.html"><img src="cohesion/landing/reader.png" alt=""></a>
+                    </div>
+                    <div class="tool-description">
+                        <h2>Markdown reader</h2>
+                        <p>Read markdown documents without distractions.</p>
+                        <div style="display: flex; align-items: center; justify-content: end;">
+                            <button class="text-button" onclick="window.open('tools/markdown-reader.html', '_self')">Try it out</button>
                         </div>
                     </div>
                 </div>
