--- a/tools.html
+++ b/tools.html
@@ -57,7 +57,7 @@
         }
     </style>
 </head>
-<body>
+<body class="theme-dark">
     <header>
         <div>
             <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
