--- a/tools/markdown-table-editor.html
+++ b/tools/markdown-table-editor.html
@@ -124,7 +124,7 @@
         }
     </style>
 </head>
-<body>
+<body class="theme-dark">
     <header>
         <div>
             <a href="../index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
