--- a/tools.html
+++ b/tools.html
@@ -92,13 +92,13 @@
             <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                 <div class="tool-item">
                     <div>
-                        <a href="tools/"><img src="cohesion/landing/tasklist.png" alt=""></a>
+                        <a href="tools/markdown-tasklist-editor.html"><img src="cohesion/landing/tasklist.png" alt=""></a>
                     </div>
                     <div class="tool-description">
-                        <h2>[WIP] Task list editor</h2>
+                        <h2>Task list editor</h2>
                         <p>Create and edit Markdown task lists with ease.</p>
                         <div style="display: flex; align-items: center; justify-content: end;">
-                            <button class="text-button" onclick="window.open('tools/', '_self')">Try it out</button>
+                            <button class="text-button" onclick="window.open('tools/markdown-tasklist-editor.html', '_self')">Try it out</button>
                         </div>
                     </div>
                 </div>
@@ -113,6 +113,20 @@
                         <p>Read markdown documents without distractions.</p>
                         <div style="display: flex; align-items: center; justify-content: end;">
                             <button class="text-button" onclick="window.open('tools/markdown-reader.html', '_self')">Try it out</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                <div class="tool-item">
+                    <div>
+                        <a href="tools/emoji-shortcodes.html"><img src="cohesion/landing/emoji.png" alt=""></a>
+                    </div>
+                    <div class="tool-description">
+                        <h2>Emoji shortcodes</h2>
+                        <p>Find emoji :shortcode: names.</p>
+                        <div style="display: flex; align-items: center; justify-content: end;">
+                            <button class="text-button" onclick="window.open('tools/emoji-shortcodes.html', '_self')">Try it out</button>
                         </div>
                     </div>
                 </div>
