--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="center">
+    <div class="center" style="padding: 10px;">
         <img src="cohesion/favicon.png" alt="" style="transform: scale(0); animation: showdialog 1s ease-in-out forwards;">
         <h3 translate="no">Cohesion</h3>
         <p translate="no">1.95</p>
@@ -15,7 +15,7 @@
         <a href="https://github.com/flarom/cohesion" target="_blank">Repository</a> • 
         <a href="https://github.com/flarom/cohesion/wiki" target="_blank">Learn</a> • 
         <a onclick="promptMessage(`
-                <table>
+                <table style='padding:20px'>
                     <thead>
                         <tr>
                             <th>Libraries</th>
