--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <kbd>Ctrl+E</kbd>
                         </button>
                         <hr />
-                        <button class="text-button" onmouseup="showMessageFromFile('dialogs/resources.html', true, true); hideAllMenus()">
+                        <button class="text-button" onmouseup="showResourcesDialog(); hideAllMenus();">
                             Resources
                             <kbd>Alt+P</kbd>
                         </button>
@@ -922,10 +922,10 @@
                     showMessageFromFile("dialogs/shortcuts.html", true, false, true, true, 600);
                     hideAllMenus();
                 }
-                //// Show resources screen (alt p)
-                else if (event.altKey && event.key === "p") {
+                //// Show resources screen (alt r)
+                else if (event.altKey && event.key === "r") {
                     event.preventDefault();
-                    showMessageFromFile("dialogs/resources.html", true, true);
+                    showResourcesDialog();
                     hideAllMenus();
                 }
                 //// Switch between the first ten documents (alt 1-0)
@@ -1080,6 +1080,24 @@
                     insertDate();
                 }
             });
+
+            function showResourcesDialog(){
+                let leftPane =
+                `<button class='icon-button' onclick='uploadFSFile().then(() => renderFSFiles());' translate='no' title='Upload file'>add</button>`
+
+                let rightpane =
+                `<button class='icon-button' translate='no' title='Search'>search</button>
+                <div class='dropdown'>
+                    <button class='icon-button' onmousedown='toggleDropdown("resources-more-menu")' translate='no' title='More options'>more_vert</button>
+                    <div class='dropdown-content menu' id='resources-more-menu'>
+                        <button class='text-button'>About Resources</button>
+                        <hr>
+                        <button class='text-button danger' onmouseup='promptDeleteAllFS()'>Delete all data</button>
+                    </div>
+                </div>`
+
+                showMessageFromFile("dialogs/resources.html", true, false, true, true, 800, leftPane, "", rightpane);
+            }
         </script>
     </body>
 </html>
