--- a/dialogs/resources.html
+++ b/dialogs/resources.html
@@ -1,113 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Resources</title>
-        <style>
-            .fs-file-container {
-                min-height: 200px;
-                height: 50vh;
-                overflow: scroll;
-                display: flex;
-                flex-wrap: wrap;
-                gap: 5px;
-            }
 
+<head>
+    <title>Resources</title>
+    <style>
+        .fs-file-container {
+            min-height: 200px;
+            height: 50vh;
+            overflow: scroll;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+            margin-top: 50px;
+            border-radius: 15px;
+            transition: all .3s;
+            border: 2px dashed transparent;
+        }
+
+        .fsfile {
+            position: relative;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: space-evenly;
+            padding: 10px;
+            border-radius: 15px;
+            margin-bottom: 10px;
+            width: 150px;
+            height: 150px;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+
+        .fsfile:hover {
+            background-color: var(--background-color-2);
+        }
+
+        .fsfile .icon {
+            font-size: 50pt;
+            display: block;
+            transition: all 0.3s ease;
+        }
+
+        .fsfile .file-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 5px;
+        }
+
+        .fsfile .dropdown {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .file-name {
+            max-width: 150px;
+            word-wrap: break-word;
+            text-align: center;
+        }
+
+        .fs-empty-state {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: var(--text-color, #555);
+            text-align: center;
+            padding: 20px;
+        }
+
+        .fs-empty-state p { max-width: 600px; }
+
+        .fs-drag-over {
+            background-color: var(--selection-color);
+            margin: 50px 10px 10px 10px;
+            border: 2px dashed var(--highlight-color);
+        }
+
+        @media screen and (max-width: 800px) {
             .fsfile {
-                position: relative;
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                flex-direction: column;
-                padding: 10px;
-                border-radius: 15px;
+                width: 100%;
+                height: auto;
+                flex-direction: row;
                 background-color: var(--background-color-2);
-                margin-bottom: 10px;
-                width: 200px;
-                height: 200px;
-                box-sizing: border-box;
-                transition: all 0.3s ease;
+                justify-content: space-between;
+                align-items: center;
+                padding: 10px;
             }
 
             .fsfile .icon {
-                font-size: 50pt;
-                display: block;
-                transition: all 0.3s ease;
+                font-size: 20pt;
+                margin-right: 10px;
             }
 
             .fsfile .file-info {
-                display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 align-items: center;
-                justify-content: center;
-                gap: 5px;
+                justify-content: flex-start;
+                gap: 10px;
+                margin-top: 0;
             }
 
             .fsfile .dropdown {
-                position: absolute;
-                top: 10px;
-                right: 10px;
+                position: static;
+                margin-left: auto;
             }
+        }
+    </style>
+</head>
 
-            @media screen and (max-width: 800px) {
-                .fs-file-container {
-                    flex-direction: column;
-                }
+<body>
+    <div id="fs-file-container" class="fs-file-container">
 
-                .fsfile {
-                    width: 100%;
-                    height: auto;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    padding: 10px;
-                }
+    </div>
 
-                .fsfile .icon {
-                    font-size: 20pt;
-                    margin-right: 10px;
-                }
+    <script>
+        async function renderFSFiles() {
+            const container = document.getElementById("fs-file-container");
+            const files = await getFSFiles();
+            container.innerHTML = "";
 
-                .fsfile .file-info {
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: flex-start;
-                    gap: 10px;
-                    margin-top: 0;
-                }
-
-                .fsfile .dropdown {
-                    position: static;
-                    margin-left: auto;
-                }
-            }
-        </style>
-    </head>
-
-    <body>
-        <h2>Resources</h2>
-        <p>Connect files from your device for usage inside of Cohesion.</p>
-        <p>You can use resources from the directory 'resources/file.png'</p>
-
-        <div style="display: flex; align-items: center; gap: 2px; margin-bottom: 10px">
-            <button class="text-button" onclick="uploadFSFile().then(() => renderFSFiles());">Add file</button>
-            <div class="dropdown">
-                <button class="icon-button" onmousedown="toggleDropdown('resources-more-menu')" translate="no" title="More options">more_vert</button>
-                <div class="dropdown-content menu align-left" id="resources-more-menu">
-                    <button class="text-button danger" onclick="promptDeleteAllFS()">Delete all data</button>
-                </div>
-            </div>
-        </div>
-
-        <div id="fs-file-container" class="fs-file-container">
-            <p style="text-align: center">Files will appear here</p>
-        </div>
-
-        <script>
-            async function renderFSFiles() {
-                const container = document.getElementById("fs-file-container");
-                const files = await getFSFiles();
-                container.innerHTML = "";
-
+            if (!files || files.length === 0) {
+                const emptyDiv = document.createElement("div");
+                emptyDiv.className = "fs-empty-state";
+                emptyDiv.innerHTML = `
+                    <img src="cohesion/file-icons/floppy.svg" alt="No files" class="empty-icon">
+                    <h2>Nothing here</h2>
+                    <p>Cohesion Resources is a local folder where you can drop media to use in your documents. Files will appear under <code>resources/</code>.</p>
+                    <p style="opacity:40%">Data is stored locally. This not a cloud service.</p>`;
+                container.appendChild(emptyDiv);
+            } else { 
                 for (let index = 0; index < files.length; index++) {
                     const file = files[index];
                     const iconPath = await getIcon(file.name);
@@ -115,115 +141,157 @@
                     const div = document.createElement("div");
                     div.className = "fsfile";
                     div.setAttribute('translate', 'no');
+                    div.addEventListener("dblclick", () => {
+                        copyPath(file.name);
+                    });
                     div.innerHTML = `
-            <span class="icon">
-                <img src="${iconPath}" alt="icon" class="file-icon">
-            </span>
-            <div class="file-info">
-                <h3>${file.name}</h3>
-                <div class="dropdown">
-                    <button class="icon-button" translate="no" onmousedown="toggleDropdown('file${index}')">
-                        more_vert
-                    </button>
-                    <div class="dropdown-content menu" id="file${index}">
-                        <button class="text-button" onmouseup="copyPath('${file.name}'); hideAllMenus()">Copy path</button>
-                        <hr>
-                        <button class="text-button" onmouseup="handleRenameFSFile(${index}); hideAllMenus()">Rename</button>
-                        <button class="text-button" onmouseup="downloadFSFile('${file.name}'); hideAllMenus()">Download</button>
-                        <hr>
-                        <button class="text-button danger" onmouseup="deleteFSFile('${file.name}'); hideAllMenus(); renderFSFiles()">Delete</button>
-                    </div>
-                </div>
-            </div>
-        `;
+                        <span class="icon">
+                            <img src="${iconPath}" alt="icon" class="file-icon">
+                        </span>
+                        <div class="file-info">
+                            <span class="file-name">${file.name}</span>
+                            <div class="dropdown">
+                                <button class="icon-button" translate="no" onmousedown="toggleDropdown('file${index}')">more_vert</button>
+                                <div class="dropdown-content menu" id="file${index}">
+                                    <button class="text-button" onmouseup="copyPath('${file.name}'); hideAllMenus()">Copy path</button>
+                                    <hr>
+                                    <button class="text-button" onmouseup="handleRenameFSFile(${index}); hideAllMenus()">Rename</button>
+                                    <button class="text-button" onmouseup="downloadFSFile('${file.name}'); hideAllMenus()">Download</button>
+                                    <hr>
+                                    <button class="text-button danger" onmouseup="deleteFSFile('${file.name}'); hideAllMenus(); renderFSFiles()">Delete</button>
+                                </div>
+                            </div>
+                        </div>
+                    `;
                     container.appendChild(div);
                 }
             }
 
-            async function handleRenameFSFile(index) {
-                const files = await getFSFiles();
-                const current = files[index];
-                if (!current) return;
+            container.addEventListener("dragover", (e) => {
+                e.preventDefault();
+                container.classList.add("fs-drag-over");
+            });
 
-                const newName = await promptString("Rename file", current.name);
-                if (!newName || newName === current.name) return;
+            container.addEventListener("dragleave", () => {
+                container.classList.remove("fs-drag-over");
+            });
 
-                try {
-                    await renameFSFile(index, newName);
-                    await renderFSFiles();
-                } catch (err) {
-                    console.error(err);
-                    showToast("Failed to rename file", "error");
+            container.addEventListener("drop", async (e) => {
+                e.preventDefault();
+                container.classList.remove("fs-drag-over");
+
+                const items = e.dataTransfer.files;
+                if (!items || items.length === 0) return;
+
+                for (let file of items) {
+                    try {
+                        const reader = new FileReader();
+                        reader.onload = async () => {
+                            try {
+                                showToast('Copying file...','hard_drive');
+                                const content = reader.result;
+                                await setFSFile({ name: file.name.replace(/\s+/g, "_"), content });
+                                await renderFSFiles();
+                            } catch (err) {
+                                console.error("Failed to save file:", err);
+                                showToast(`Failed to upload ${file.name}`, "error");
+                            }
+                        };
+                        reader.readAsDataURL(file);
+                    } catch (err) {
+                        console.error("Failed to save file:", err);
+                        showToast(`Failed to upload ${file.name}`, "error");
+                    }
                 }
+            });
+        }
+
+        async function handleRenameFSFile(index, warn = false) {
+            const files = await getFSFiles();
+            const current = files[index];
+            if (!current) return;
+
+            const newName = await promptString("Rename file", current.name, warn);
+            if (!newName || newName === current.name) return;
+
+            try {
+                await renameFSFile(index, newName);
+                await renderFSFiles();
+            } catch (err) {
+                console.error(err);
+                showToast(err, "error");
+                handleRenameFSFile(index, true);
+            }
+        }
+
+        async function getIcon(fileName) {
+            const ext = fileName.split(".").pop().toLowerCase();
+
+            if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
+                return "cohesion/file-icons/image-x-generic.svg";
+            } else if (["mp4", "webm", "ogg"].includes(ext)) {
+                return "cohesion/file-icons/video-x-generic.svg";
+            } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
+                return "cohesion/file-icons/audio-x-generic.svg";
+            } else if (["pdf"].includes(ext)) {
+                return "cohesion/file-icons/application-pdf.svg";
             }
 
-            async function getIcon(fileName) {
-                const ext = fileName.split(".").pop().toLowerCase();
 
-                if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
-                    return "cohesion/file-icons/image-x-generic.svg";
-                } else if (["mp4", "webm", "ogg"].includes(ext)) {
-                    return "cohesion/file-icons/video-x-generic.svg";
-                } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
-                    return "cohesion/file-icons/audio-x-generic.svg";
-                } else if (["pdf"].includes(ext)) {
-                    return "cohesion/file-icons/application-pdf.svg";
-                }
-                
-                
-                else if (["txt"].includes(ext)) {
-                    return "cohesion/file-icons/text-x-generic.svg";
-                } else {
-                    return "cohesion/file-icons/text-x-generic.svg";
-                }
+            else if (["txt"].includes(ext)) {
+                return "cohesion/file-icons/text-x-generic.svg";
+            } else {
+                return "cohesion/file-icons/text-x-generic.svg";
+            }
+        }
+
+        function copyPath(name) {
+            const ext = name.split(".").pop().toLowerCase();
+            let filecontent = "";
+
+            if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
+                filecontent = `![${name}](resources/${name})`;
+            } else if (["mp4", "webm", "ogg"].includes(ext)) {
+                filecontent = `![${name}](resources/${name})`;
+            } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
+                filecontent = `![${name}](resources/${name})`;
+            } else if (ext === "pdf") {
+                filecontent = `<iframe src="resources/${name}"></iframe>`;
+            } else {
+                filecontent = `resources/${name}`;
             }
 
-            function copyPath(name) {
-                const ext = name.split(".").pop().toLowerCase();
-                let filecontent = "";
+            navigator.clipboard.writeText(filecontent).then(() => {
+                showToast("Copied to the clipboard", "content_copy");
+            });
+        }
 
-                if (["apng", "gif", "ico", "cur", "jpg", "jpeg", "jfif", "pjpeg", "pjp", "png", "svg", "webp"].includes(ext)) {
-                    filecontent = `![${name}](resources/${name})`;
-                } else if (["mp4", "webm", "ogg"].includes(ext)) {
-                    filecontent = `![${name}](resources/${name})`;
-                } else if (["mp3", "wav", "aac", "flac"].includes(ext)) {
-                    filecontent = `![${name}](resources/${name})`;
-                } else if (ext === "pdf") {
-                    filecontent = `<iframe src="resources/${name}"></iframe>`;
-                } else {
-                    filecontent = `resources/${name}`;
-                }
-
-                navigator.clipboard.writeText(filecontent).then(() => {
-                    showToast("Copied to the clipboard", "content_copy");
-                });
+        async function promptDeleteAllFS() {
+            hideAllMenus();
+            if (await promptConfirm("Are you sure you want to delete all files?", true)) {
+                deleteAllFS().then(renderFSFiles());
             }
+        }
 
-            async function promptDeleteAllFS() {
-                hideAllMenus();
-                if (await promptConfirm("Are you sure you want to delete all files?", true)) {
-                    deleteAllFS().then(renderFSFiles());
-                }
-            }
+        async function downloadFSFile(name) {
+            const content = await resolveFSItem(name);
+            if (!content) return;
 
-            async function downloadFSFile(name) {
-                const content = await resolveFSItem(name);
-                if (!content) return;
+            const a = document.createElement("a");
+            a.href = content;
+            a.download = name;
+            a.click();
+        }
 
-                const a = document.createElement("a");
-                a.href = content;
-                a.download = name;
-                a.click();
-            }
+        async function deleteFSFile(name) {
+            const db = await openFSDB();
+            const tx = db.transaction("files", "readwrite");
+            tx.objectStore("files").delete(name);
+            await tx.done;
+        }
 
-            async function deleteFSFile(name) {
-                const db = await openFSDB();
-                const tx = db.transaction("files", "readwrite");
-                tx.objectStore("files").delete(name);
-                await tx.done;
-            }
+        renderFSFiles();
+    </script>
+</body>
 
-            renderFSFiles();
-        </script>
-    </body>
 </html>
