update table style

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <hr />
                         <button class="text-button" onmouseup="showResourcesDialog(); hideAllMenus();">
                             Resources
-                            <kbd>Alt+P</kbd>
+                            <kbd>Alt+R</kbd>
                         </button>
                         <button class="text-button" onmouseup="showMessageFromFile('dialogs/settings.html', true, false, true, true, 900); hideAllMenus()">
                             Settings
