--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                             <kbd>Ctrl+,</kbd>
                         </button>
                         <hr />
-                        <button class="text-button" onmouseup="showMessageFromFile('landing.html', false, true, false, false); hideAllMenus()">Learn</button>
+                        <button class="text-button" onmouseup="window.open('https://github.com/flarom/cohesion/wiki'); hideAllMenus()">Documentation</button>
+                        <button class="text-button" onmouseup="showCheatSheet();">Markdown Cheat Sheet</button>
                         <!-- <button class="text-button" onmouseup="showMessageFromFile('dialogs/shortcuts.html', true, false, true, true, 600); hideAllMenus();">
                             Keyboard shortcuts
                             <kbd>Ctrl+?</kbd>
@@ -139,9 +140,8 @@
                             Keyboard shortcuts
                             <kbd>Ctrl+?</kbd>
                         </button>
-                        <button class="text-button" onmouseup="showCheatSheet();">
-                            Markdown Cheat Sheet
-                        </button>
+                        <hr>
+                        <button class="text-button" onmouseup="showMessageFromFile('landing.html', false, true, false, false); hideAllMenus()">Home page</button>
                         <button class="text-button" onmouseup="showMessageFromFile('about.html'); hideAllMenus();">
                             About Cohesion
                             <kbd>F1</kbd>
